--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
+    "swiper": "6.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
