--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-input-range": "^1.3.0",
+    "react-redux": "^7.2.5",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "swiper": "6.0.2",
